# piper

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  docker-bake.hcl  docker-bake.yml  docker-compose.yml  justfile  main.py  pyproject.toml
config/: config.env  luigi-log.conf  luigi.cfg
docker/: base.Dockerfile  luigi-scheduler.Dockerfile  luigi-worker.Dockerfile  luigi_worker.sh  nn-worker.Dockerfile  orchestrator.Dockerfile
piper/: __init__.py  api.py
piper/logger/: __init__.py  logger.py  pyproject.toml
piper/management/: __init__.py  luigi_tasks.py  models.py
src/burn-nn/: Cargo.toml
src/burn-nn/src/: lib.rs  main.rs
src/burn-nn/src/common/: mod.rs
src/burn-nn/src/data/: augmentation.rs  batch.rs  conversion.rs  loader.rs  mod.rs  normalize.rs
src/burn-nn/src/model/: blocks.rs  inference.rs  mod.rs  resnet.rs  training.rs  valid.rs
src/burn-nn/src/tui/: app.rs  mod.rs  ui.rs
src/burn-nn/src/tui/widgets/: mod.rs
src/burn-nn/src/utils/: app_paths.rs  metrics.rs  mod.rs
src/piper/: __init__.py  api.py  main.py
src/piper/dali/: data_augment.py  pipelines.py
src/piper/luigi/: luigi_tasks.py
src/piper/luigi_tasks/: __init__.py  luigi_tasks.py
src/piper/management/: data_augment.py  luigi_tasks.py
src/piper/spark/: data_augment.py
src/piper/utils/: __init__.py  constants.py
