[project]
name = "piper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=1.7.4.5",
    "luigi>=3.6.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
pyspark = [
    "pyspark>=4.0.0",
]
rapids = [
    "cudf-cu12==25.8.*",
    "dask-cudf-cu12==25.8.*",
    "cuml-cu12==25.8.*",
    "cugraph-cu12==25.8.*",
    "nx-cugraph-cu12==25.8.*",
    "cuxfilter-cu12==25.8.*",
    "cucim-cu12==25.8.*",
    "pylibraft-cu12==25.8.*",
    "raft-dask-cu12==25.8.*",
    "cuvs-cu12==25.8.*",
]
dev = [
    "pyspark>=4.0.0",
    "cudf-cu12==25.8.*",
    "dask-cudf-cu12==25.8.*",
    "cuml-cu12==25.8.*",
    "cugraph-cu12==25.8.*",
    "nx-cugraph-cu12==25.8.*",
    "cuxfilter-cu12==25.8.*",
    "cucim-cu12==25.8.*",
    "pylibraft-cu12==25.8.*",
    "raft-dask-cu12==25.8.*",
    "cuvs-cu12==25.8.*",
    "nx-cugraph-cu12==25.8.*",
]